--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "build": "bun build src/index.tsx --outdir dist --target node --format esm --external react-devtools-core",
     "start": "node dist/index.js",
     "test": "bun test",
-    "lint": "eslint src/**/*.{ts,tsx}",
-    "format": "prettier --write src/**/*.{ts,tsx}"
+    "lint": "biome lint src/",
+    "format": "biome format --write src/",
+    "check": "biome check --write src/"
   },
   "keywords": [
     "git",
@@ -41,12 +42,7 @@
     "@types/node": "^20.11.0",
     "@types/react": "^18.2.48",
     "@types/minimist": "^1.2.5",
-    "@typescript-eslint/eslint-plugin": "^6.19.0",
-    "@typescript-eslint/parser": "^6.19.0",
-    "eslint": "^8.56.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^3.2.4",
+    "@biomejs/biome": "^1.9.4",
     "typescript": "^5.3.3"
   },
   "engines": {
