--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react": "^18.2.0",
     "minimist": "^1.2.8",
     "glob": "^10.3.10",
-    "minimatch": "^9.0.3"
+    "minimatch": "^9.0.3",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
