Refactor config types to use schema-based validation
- Replace manual WorktreeConfig type with schema-based WorktreeConfig
- Update default config to parse from WorktreeConfigSchema
- Adjust imports and type references to use schema types
- Minor formatting fixes in package.json and JSON files
- Slight reformatting in file-service copy logic for clarity

--- a/package.json
+++ b/package.json
@@ -16,15 +16,7 @@
     "format": "biome format --write src/",
     "check": "biome check --write src/"
   },
-  "keywords": [
-    "git",
-    "worktree",
-    "cli",
-    "codegen",
-    "claude",
-    "ai",
-    "codex"
-  ],
+  "keywords": ["git", "worktree", "cli", "codegen", "claude", "ai", "codex"],
   "author": {
     "name": "Raghav Pillai",
     "email": "me@raghav.sh",
