Rename project from Brancher to Branchlet
- Update project name in README and package.json
- Change CLI command references from brancher to branchlet
- Rename config file constants and paths to branchlet
- Update user-facing messages and logs to reflect new name

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "brancher",
+  "name": "branchlet",
   "version": "0.0.1",
   "description": "CLI for creating and managing Git worktrees",
   "type": "module",
   "main": "dist/index.js",
   "bin": {
-    "brancher": "dist/index.js"
+    "branchlet": "dist/index.js"
   },
   "scripts": {
     "dev": "bun run src/index.tsx",
