Update version, rename project, always run main()
- Bump package version to 0.0.4 and add files field in package.json
- Rename project from 'brancher' to 'branchlet' in un.lock
- Clean up formatting in un.lock
- Modify src/index.tsx to always execute main() on run

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "branchlet",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "description": "CLI for creating and managing Git worktrees",
   "type": "module",
   "main": "dist/index.js",
@@ -24,6 +24,10 @@
     "url": "https://raghav.sh"
   },
   "license": "MIT",
+  "files": [
+    "dist/",
+    "README.md"
+  ],
   "dependencies": {
     "glob": "^11.0.3",
     "ink": "^6.2.2",
