--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "branchlet",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "CLI for creating and managing Git worktrees",
   "type": "module",
   "main": "dist/index.js",
@@ -17,7 +17,15 @@
     "check": "biome check --write src/",
     "typecheck": "tsc --noEmit"
   },
-  "keywords": ["git", "worktree", "cli", "codegen", "claude", "ai", "codex"],
+  "keywords": [
+    "git",
+    "worktree",
+    "cli",
+    "codegen",
+    "claude",
+    "ai",
+    "codex"
+  ],
   "author": {
     "name": "Raghav Pillai",
     "email": "me@raghav.sh",
