--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "build": "bun run typecheck && bun build src/index.tsx --outdir dist --target node --format esm --external yoga-wasm-web",
     "start": "node dist/index.js",
     "test": "bun test",
+    "test:watch": "bun test --watch",
+    "test:coverage": "bun test --coverage",
     "lint": "biome lint src/",
     "format": "biome format --write src/",
     "check": "biome check --write src/",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "ci": "bun run typecheck && bun run lint && bun test && bun run build",
+    "prepack": "bun run build"
   },
   "keywords": [
     "git",
@@ -48,9 +52,11 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^2.2.0",
+    "@testing-library/react": "^16.1.0",
     "@types/minimist": "^1.2.5",
     "@types/node": "^24.3.0",
     "@types/react": "^19.1.10",
+    "bun-types": "^1.2.0",
     "typescript": "^5.9.2"
   },
   "engines": {
