Add comprehensive tests and update CI test commands
- Add extensive unit and integration tests for constants, services, schemas, and utilities
- Cover validation, error handling, edge cases, and performance scenarios
- Update CI and package.json test commands to specify tests directory
- Add test timeout configuration in unfig.toml
- Improve test reliability and maintainability across the codebase

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
         run: bun run lint
         
       - name: Run tests
-        run: bun test --coverage
+        run: bun test tests/ --coverage
         
       - name: Build project
         run: bun run build
