--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "dev": "bun run src/index.tsx",
     "build": "bun run typecheck && bun build src/index.tsx --outdir dist --target node --format esm --external yoga-wasm-web",
     "start": "node dist/index.js",
-    "test": "bun test",
-    "test:watch": "bun test --watch",
-    "test:coverage": "bun test --coverage",
+    "test": "bun test tests/",
+    "test:watch": "bun test tests/ --watch",
+    "test:coverage": "bun test tests/ --coverage",
     "lint": "biome lint src/",
     "format": "biome format --write src/",
     "check": "biome check --write src/",
