Include Node version in CI test job name
- Updated GitHub Actions workflow test job name to show Node.js version
- Improved clarity of test job identification in CI logs

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ concurrency:
 
 jobs:
   test:
-    name: Test
+    name: Test (Node v${{ matrix.node-version }})
     runs-on: ubuntu-latest
     
     strategy:
